# whylogs-container-load-test

./: Makefile  README.md  generate-json.py  local.env  pyproject.toml
csv/: data-1.csv  data-10.csv  data-100.csv  data-1000.csv  data-50.csv  data-500.csv  lending_club_100.csv
json/: data-10.json  data-50.json  data-500.json
